--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -162,13 +162,8 @@ window#waybar.hidden {
 }
 
 #battery.critical:not(.charging) {
-  background-color: #b5e8e0;
+  background-color: @red;
   color: #161320;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
 }
 
 @keyframes blink {
@@ -243,7 +238,7 @@ window#waybar.hidden {
 }
 
 #custom-power {
-  font-size: 18px;
+  font-size: 15px; 
   margin-top: 6px;
   margin-bottom: 0px;
   margin-left: 8px;
