--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,209 +1,113 @@
-@import "themes/macchiato.css";
-@define-color card_bg #242438;
+/* @define-color bg0 #212121; */
+/*@define-color bg1 #353535;*/
+/*@define-color bg1 rgba(33,33,33,0.8);*/
+@define-color bg1 #212121;
+@define-color fg0 #eeffff;
+@define-color yellow #ffcb6b;
 
 * {
-  border: none;
-  border-radius: 8px;
-  font-family: "JetbrainsMono Nerd Font";
-  font-weight: 700;
+  font-family: JetBrainsMono Nerd Font Propo;
   font-size: 12px;
-  min-height: 8px;
+  font-weight: 500;
+  min-height: 0;
+  border-color: @bg1;
 }
 
 window#waybar {
-  background: transparent;
+  /* background-color: @bg0; */
+  background-color: transparent;
+  color: @fg0; /* didn't affect workspaces */
 }
 
-window#waybar.hidden {
-  opacity: 0.2;
+#workspaces {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 4px;
+
+  margin: 8px 4px 0px 8px;
+}
+
+#workspaces button {
+  color: @fg0;
+  border-radius: 18px;
+}
+
+#workspaces button.active {
+  color: @yellow;
 }
 
 #window {
-  margin-top: 10px;
-  padding-left: 10px;
-  padding-right: 100px;
-  border-radius: 10px;
-  transition: none;
-  color: transparent;
-  background: transparent;
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 0px;
+  margin: 8px 4px 0px 4px;
 }
 
-/* left */
-#clock {
-  transition: none;
-  color: #abe9b3;
-  background: @card_bg;
+window#waybar.empty #window {
+  /* hide empty module */
+  background-color: transparent;
+}
+
+#tray {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 0px;
+  margin: 8px 4px 0px 4px;
+}
+
+#hw {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 0px;
+  margin: 8px 4px 0px 4px;
 }
 
 #cpu {
-  transition: none;
-  color: #96cdfb;
-  background: @card_bg;
-}
-#network.speed {
-  transition: none;
-  color: @lavender;
-  background: @card_bg;
-}
-#tray {
-  transition: none;
-  color: #b5e8e0;
-  background: @card_bg;
+  margin-right: 8px;
 }
 
-/* center */
-
-#workspaces {
-  font-size: 4px;
-  margin-bottom: 0px;
-  background: @card_bg;
-  transition: none;
+#memory {
+  margin-left: 8px;
+  margin-right: 16px;
 }
 
-#workspaces button {
-  transition: none;
-  color: #b5e8e0;
-  background: transparent;
-  font-size: 16px;
-  border-radius: 2px;
-}
-
-#workspaces button.active {
-  transition: none;
-  color: #f28fad;
-  background: transparent;
-  font-size: 4px;
-}
-
-#workspaces button.active {
-  color: #abe9b3;
-  border-top: 2px solid #abe9b3;
-  border-bottom: 2px solid #abe9b3;
-}
-#workspaces button.active:first-child {
-  color: #abe9b3;
-  border-top: 2px solid #abe9b3;
-  border-bottom: 2px solid #abe9b3;
-  border-left: 2px solid #abe9b3;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-}
-#workspaces button.active:last-child {
-  color: #abe9b3;
-  border-top: 2px solid #abe9b3;
-  border-bottom: 2px solid #abe9b3;
-  border-right: 2px solid #abe9b3;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-}
-
-#workspaces button:hover {
-  transition: none;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: #fae3b0;
-  border-color: #e8a2af;
-  color: #e8a2af;
-}
-
-#workspaces button.active:hover {
-  color: #e8a2af;
-}
-
-/* right */
-#network {
-  transition: none;
-
-  color: #bd93f9;
-  background: @card_bg;
-}
-
-#bluetooth {
-  transition: none;
-  color: @rosewater;
-  background: @card_bg;
-}
-
-#backlight {
-  transition: none;
-  color: #f8bd96;
-  background: @card_bg;
-}
-
-#pulseaudio {
-  transition: none;
-  color: #fae3b0;
-  background: @card_bg;
+#control {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 10px;
+  margin: 8px 4px 0px 8px;
 }
 
 #battery {
-  transition: none;
-  color: #b5e8e0;
-  background: @card_bg;
+  margin-right: 8px;
 }
 
-#battery.charging,
-#battery.plugged {
-  color: #161320;
-  background-color: #b5e8e0;
+#network {
+  margin: 0px 8px;
 }
 
-#battery.critical:not(.charging) {
-  background-color: @red;
-  color: #161320;
+#bluetooth {
+  margin: 0px 8px;
 }
 
-#power-profiles-daemon {
-  transition: none;
-  color: @red;
-  background: @card_bg;
+#pulseaudio {
+  margin: 0px 8px;
+}
+#backlight {
+  margin: 0px 8px;
+  margin-right: 0;
 }
 
-#custom-power {
-  font-size: 15px;
-  margin-top: 6px;
-  margin-bottom: 0px;
-  margin-left: 8px;
-  margin-right: 10px;
-  padding-left: 10px;
-  padding-right: 0px;
-  transition: none;
-  color: @red;
-  background: @card_bg;
+#clock {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 0px;
+  margin: 8px 8px 0px 4px;
 }
 
-#custom-media {
-  margin-top: 6px;
-  margin-left: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  transition: none;
-  color: #161320;
-  background: #f2cdcd;
-}
-
-#workspaces button {
-  padding: 2px 10px;
-}
-
-#clock,
-#cpu,
-#network.speed,
-#tray,
-#network,
-#bluetooth,
-#backlight,
-#pulseaudio,
-#battery,
-#power-profiles-daemon,
-#custom-power {
-  padding: 2px 10px;
-  margin-left: 6px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-
-#workspaces {
-  margin-top: 0px;
+#custom-notification {
+  background-color: @bg1;
+  border-radius: 18px;
+  padding: 0px 0px;
+  margin: 8px 8px 0px 4px;
 }
