--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1a1110;
+    @define-color background #1a1111;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #392e2c;
+    @define-color inverse_on_surface #382e2e;
 
-    @define-color inverse_primary #904b40;
+    @define-color inverse_primary #8f4a4d;
 
-    @define-color inverse_surface #f1dfdb;
+    @define-color inverse_surface #f0dede;
 
-    @define-color on_background #f1dfdb;
+    @define-color on_background #f0dede;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561e16;
+    @define-color on_primary #561d22;
 
-    @define-color on_primary_container #ffdad4;
+    @define-color on_primary_container #ffdada;
 
-    @define-color on_primary_fixed #3a0905;
+    @define-color on_primary_fixed #3b080e;
 
-    @define-color on_primary_fixed_variant #73342a;
+    @define-color on_primary_fixed_variant #733337;
 
-    @define-color on_secondary #442925;
+    @define-color on_secondary #44292a;
 
-    @define-color on_secondary_container #ffdad4;
+    @define-color on_secondary_container #ffdada;
 
-    @define-color on_secondary_fixed #2c1511;
+    @define-color on_secondary_fixed #2c1516;
 
-    @define-color on_secondary_fixed_variant #5d3f3a;
+    @define-color on_secondary_fixed_variant #5d3f40;
 
-    @define-color on_surface #f1dfdb;
+    @define-color on_surface #f0dede;
 
-    @define-color on_surface_variant #d8c2be;
+    @define-color on_surface_variant #d7c1c1;
 
-    @define-color on_tertiary #3e2e04;
+    @define-color on_tertiary #422c05;
 
-    @define-color on_tertiary_container #fbe0a6;
+    @define-color on_tertiary_container #ffddb0;
 
-    @define-color on_tertiary_fixed #251a00;
+    @define-color on_tertiary_fixed #291800;
 
-    @define-color on_tertiary_fixed_variant #564419;
+    @define-color on_tertiary_fixed_variant #5b421a;
 
-    @define-color outline #a08c89;
+    @define-color outline #9f8c8c;
 
-    @define-color outline_variant #534341;
+    @define-color outline_variant #524343;
 
-    @define-color primary #ffb4a8;
+    @define-color primary #ffb3b4;
 
-    @define-color primary_container #73342a;
+    @define-color primary_container #733337;
 
-    @define-color primary_fixed #ffdad4;
+    @define-color primary_fixed #ffdada;
 
-    @define-color primary_fixed_dim #ffb4a8;
+    @define-color primary_fixed_dim #ffb3b4;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e7bdb6;
+    @define-color secondary #e6bdbd;
 
-    @define-color secondary_container #5d3f3a;
+    @define-color secondary_container #5d3f40;
 
-    @define-color secondary_fixed #ffdad4;
+    @define-color secondary_fixed #ffdada;
 
-    @define-color secondary_fixed_dim #e7bdb6;
+    @define-color secondary_fixed_dim #e6bdbd;
 
     @define-color shadow #000000;
 
-    @define-color source_color #a24d40;
+    @define-color source_color #aa303e;
 
-    @define-color surface #1a1110;
+    @define-color surface #1a1111;
 
-    @define-color surface_bright #423735;
+    @define-color surface_bright #413737;
 
-    @define-color surface_container #271d1c;
+    @define-color surface_container #271d1d;
 
-    @define-color surface_container_high #322826;
+    @define-color surface_container_high #322828;
 
-    @define-color surface_container_highest #3d3230;
+    @define-color surface_container_highest #3d3232;
 
-    @define-color surface_container_low #231918;
+    @define-color surface_container_low #221919;
 
-    @define-color surface_container_lowest #140c0b;
+    @define-color surface_container_lowest #140c0c;
 
-    @define-color surface_dim #1a1110;
+    @define-color surface_dim #1a1111;
 
-    @define-color surface_tint #ffb4a8;
+    @define-color surface_tint #ffb3b4;
 
-    @define-color surface_variant #534341;
+    @define-color surface_variant #524343;
 
-    @define-color tertiary #dec48c;
+    @define-color tertiary #e6c18d;
 
-    @define-color tertiary_container #564419;
+    @define-color tertiary_container #5b421a;
 
-    @define-color tertiary_fixed #fbe0a6;
+    @define-color tertiary_fixed #ffddb0;
 
-    @define-color tertiary_fixed_dim #dec48c;
+    @define-color tertiary_fixed_dim #e6c18d;
 
