--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1a1111;
+    @define-color background #1a120d;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #382e2e;
+    @define-color inverse_on_surface #382e29;
 
-    @define-color inverse_primary #8f4a4d;
+    @define-color inverse_primary #8c4e28;
 
-    @define-color inverse_surface #f0dede;
+    @define-color inverse_surface #f0dfd7;
 
-    @define-color on_background #f0dede;
+    @define-color on_background #f0dfd7;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561d22;
+    @define-color on_primary #532200;
 
-    @define-color on_primary_container #ffdada;
+    @define-color on_primary_container #ffdbc9;
 
-    @define-color on_primary_fixed #3b080e;
+    @define-color on_primary_fixed #331200;
 
-    @define-color on_primary_fixed_variant #733337;
+    @define-color on_primary_fixed_variant #6f3813;
 
-    @define-color on_secondary #44292a;
+    @define-color on_secondary #432b1d;
 
-    @define-color on_secondary_container #ffdada;
+    @define-color on_secondary_container #ffdbc9;
 
-    @define-color on_secondary_fixed #2c1516;
+    @define-color on_secondary_fixed #2b160a;
 
-    @define-color on_secondary_fixed_variant #5d3f40;
+    @define-color on_secondary_fixed_variant #5c4132;
 
-    @define-color on_surface #f0dede;
+    @define-color on_surface #f0dfd7;
 
-    @define-color on_surface_variant #d7c1c1;
+    @define-color on_surface_variant #d7c2b9;
 
-    @define-color on_tertiary #422c05;
+    @define-color on_tertiary #343208;
 
-    @define-color on_tertiary_container #ffddb0;
+    @define-color on_tertiary_container #eae5ab;
 
-    @define-color on_tertiary_fixed #291800;
+    @define-color on_tertiary_fixed #1e1c00;
 
-    @define-color on_tertiary_fixed_variant #5b421a;
+    @define-color on_tertiary_fixed_variant #4b481d;
 
-    @define-color outline #9f8c8c;
+    @define-color outline #9f8d84;
 
-    @define-color outline_variant #524343;
+    @define-color outline_variant #52443c;
 
-    @define-color primary #ffb3b4;
+    @define-color primary #ffb68e;
 
-    @define-color primary_container #733337;
+    @define-color primary_container #6f3813;
 
-    @define-color primary_fixed #ffdada;
+    @define-color primary_fixed #ffdbc9;
 
-    @define-color primary_fixed_dim #ffb3b4;
+    @define-color primary_fixed_dim #ffb68e;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e6bdbd;
+    @define-color secondary #e6beaa;
 
-    @define-color secondary_container #5d3f40;
+    @define-color secondary_container #5c4132;
 
-    @define-color secondary_fixed #ffdada;
+    @define-color secondary_fixed #ffdbc9;
 
-    @define-color secondary_fixed_dim #e6bdbd;
+    @define-color secondary_fixed_dim #e6beaa;
 
     @define-color shadow #000000;
 
-    @define-color source_color #aa303e;
+    @define-color source_color #e77426;
 
-    @define-color surface #1a1111;
+    @define-color surface #1a120d;
 
-    @define-color surface_bright #413737;
+    @define-color surface_bright #413732;
 
-    @define-color surface_container #271d1d;
+    @define-color surface_container #271e19;
 
-    @define-color surface_container_high #322828;
+    @define-color surface_container_high #312823;
 
-    @define-color surface_container_highest #3d3232;
+    @define-color surface_container_highest #3d332e;
 
-    @define-color surface_container_low #221919;
+    @define-color surface_container_low #221a15;
 
-    @define-color surface_container_lowest #140c0c;
+    @define-color surface_container_lowest #140d08;
 
-    @define-color surface_dim #1a1111;
+    @define-color surface_dim #1a120d;
 
-    @define-color surface_tint #ffb3b4;
+    @define-color surface_tint #ffb68e;
 
-    @define-color surface_variant #524343;
+    @define-color surface_variant #52443c;
 
-    @define-color tertiary #e6c18d;
+    @define-color tertiary #cdc991;
 
-    @define-color tertiary_container #5b421a;
+    @define-color tertiary_container #4b481d;
 
-    @define-color tertiary_fixed #ffddb0;
+    @define-color tertiary_fixed #eae5ab;
 
-    @define-color tertiary_fixed_dim #e6c18d;
+    @define-color tertiary_fixed_dim #cdc991;
 
