--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1a120d;
+    @define-color background #15130c;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #382e29;
+    @define-color inverse_on_surface #333027;
 
-    @define-color inverse_primary #8c4e28;
+    @define-color inverse_primary #695f11;
 
-    @define-color inverse_surface #f0dfd7;
+    @define-color inverse_surface #e8e2d5;
 
-    @define-color on_background #f0dfd7;
+    @define-color on_background #e8e2d5;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #532200;
+    @define-color on_primary #373100;
 
-    @define-color on_primary_container #ffdbc9;
+    @define-color on_primary_container #f3e489;
 
-    @define-color on_primary_fixed #331200;
+    @define-color on_primary_fixed #201c00;
 
-    @define-color on_primary_fixed_variant #6f3813;
+    @define-color on_primary_fixed_variant #504700;
 
-    @define-color on_secondary #432b1d;
+    @define-color on_secondary #353117;
 
-    @define-color on_secondary_container #ffdbc9;
+    @define-color on_secondary_container #ebe3bd;
 
-    @define-color on_secondary_fixed #2b160a;
+    @define-color on_secondary_fixed #1f1c05;
 
-    @define-color on_secondary_fixed_variant #5c4132;
+    @define-color on_secondary_fixed_variant #4c472b;
 
-    @define-color on_surface #f0dfd7;
+    @define-color on_surface #e8e2d5;
 
-    @define-color on_surface_variant #d7c2b9;
+    @define-color on_surface_variant #ccc6b5;
 
-    @define-color on_tertiary #343208;
+    @define-color on_tertiary #113725;
 
-    @define-color on_tertiary_container #eae5ab;
+    @define-color on_tertiary_container #c3ecd2;
 
-    @define-color on_tertiary_fixed #1e1c00;
+    @define-color on_tertiary_fixed #002112;
 
-    @define-color on_tertiary_fixed_variant #4b481d;
+    @define-color on_tertiary_fixed_variant #294e3b;
 
-    @define-color outline #9f8d84;
+    @define-color outline #959181;
 
-    @define-color outline_variant #52443c;
+    @define-color outline_variant #4a4739;
 
-    @define-color primary #ffb68e;
+    @define-color primary #d6c871;
 
-    @define-color primary_container #6f3813;
+    @define-color primary_container #504700;
 
-    @define-color primary_fixed #ffdbc9;
+    @define-color primary_fixed #f3e489;
 
-    @define-color primary_fixed_dim #ffb68e;
+    @define-color primary_fixed_dim #d6c871;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e6beaa;
+    @define-color secondary #cfc7a2;
 
-    @define-color secondary_container #5c4132;
+    @define-color secondary_container #4c472b;
 
-    @define-color secondary_fixed #ffdbc9;
+    @define-color secondary_fixed #ebe3bd;
 
-    @define-color secondary_fixed_dim #e6beaa;
+    @define-color secondary_fixed_dim #cfc7a2;
 
     @define-color shadow #000000;
 
-    @define-color source_color #e77426;
+    @define-color source_color #d4c564;
 
-    @define-color surface #1a120d;
+    @define-color surface #15130c;
 
-    @define-color surface_bright #413732;
+    @define-color surface_bright #3b3930;
 
-    @define-color surface_container #271e19;
+    @define-color surface_container #212017;
 
-    @define-color surface_container_high #312823;
+    @define-color surface_container_high #2c2a21;
 
-    @define-color surface_container_highest #3d332e;
+    @define-color surface_container_highest #37352c;
 
-    @define-color surface_container_low #221a15;
+    @define-color surface_container_low #1d1c13;
 
-    @define-color surface_container_lowest #140d08;
+    @define-color surface_container_lowest #100e07;
 
-    @define-color surface_dim #1a120d;
+    @define-color surface_dim #15130c;
 
-    @define-color surface_tint #ffb68e;
+    @define-color surface_tint #d6c871;
 
-    @define-color surface_variant #52443c;
+    @define-color surface_variant #4a4739;
 
-    @define-color tertiary #cdc991;
+    @define-color tertiary #a7d0b6;
 
-    @define-color tertiary_container #4b481d;
+    @define-color tertiary_container #294e3b;
 
-    @define-color tertiary_fixed #eae5ab;
+    @define-color tertiary_fixed #c3ecd2;
 
-    @define-color tertiary_fixed_dim #cdc991;
+    @define-color tertiary_fixed_dim #a7d0b6;
 
