--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #15130c;
+    @define-color background #101418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #333027;
+    @define-color inverse_on_surface #2d3135;
 
-    @define-color inverse_primary #695f11;
+    @define-color inverse_primary #31628d;
 
-    @define-color inverse_surface #e8e2d5;
+    @define-color inverse_surface #e0e2e8;
 
-    @define-color on_background #e8e2d5;
+    @define-color on_background #e0e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #373100;
+    @define-color on_primary #003355;
 
-    @define-color on_primary_container #f3e489;
+    @define-color on_primary_container #cfe5ff;
 
-    @define-color on_primary_fixed #201c00;
+    @define-color on_primary_fixed #001d34;
 
-    @define-color on_primary_fixed_variant #504700;
+    @define-color on_primary_fixed_variant #124a73;
 
-    @define-color on_secondary #353117;
+    @define-color on_secondary #243240;
 
-    @define-color on_secondary_container #ebe3bd;
+    @define-color on_secondary_container #d5e4f7;
 
-    @define-color on_secondary_fixed #1f1c05;
+    @define-color on_secondary_fixed #0e1d2a;
 
-    @define-color on_secondary_fixed_variant #4c472b;
+    @define-color on_secondary_fixed_variant #3a4857;
 
-    @define-color on_surface #e8e2d5;
+    @define-color on_surface #e0e2e8;
 
-    @define-color on_surface_variant #ccc6b5;
+    @define-color on_surface_variant #c2c7cf;
 
-    @define-color on_tertiary #113725;
+    @define-color on_tertiary #392a49;
 
-    @define-color on_tertiary_container #c3ecd2;
+    @define-color on_tertiary_container #f0dbff;
 
-    @define-color on_tertiary_fixed #002112;
+    @define-color on_tertiary_fixed #231532;
 
-    @define-color on_tertiary_fixed_variant #294e3b;
+    @define-color on_tertiary_fixed_variant #504060;
 
-    @define-color outline #959181;
+    @define-color outline #8c9199;
 
-    @define-color outline_variant #4a4739;
+    @define-color outline_variant #42474e;
 
-    @define-color primary #d6c871;
+    @define-color primary #9dcbfb;
 
-    @define-color primary_container #504700;
+    @define-color primary_container #124a73;
 
-    @define-color primary_fixed #f3e489;
+    @define-color primary_fixed #cfe5ff;
 
-    @define-color primary_fixed_dim #d6c871;
+    @define-color primary_fixed_dim #9dcbfb;
 
     @define-color scrim #000000;
 
-    @define-color secondary #cfc7a2;
+    @define-color secondary #b9c8da;
 
-    @define-color secondary_container #4c472b;
+    @define-color secondary_container #3a4857;
 
-    @define-color secondary_fixed #ebe3bd;
+    @define-color secondary_fixed #d5e4f7;
 
-    @define-color secondary_fixed_dim #cfc7a2;
+    @define-color secondary_fixed_dim #b9c8da;
 
     @define-color shadow #000000;
 
-    @define-color source_color #d4c564;
+    @define-color source_color #232c36;
 
-    @define-color surface #15130c;
+    @define-color surface #101418;
 
-    @define-color surface_bright #3b3930;
+    @define-color surface_bright #36393e;
 
-    @define-color surface_container #212017;
+    @define-color surface_container #1d2024;
 
-    @define-color surface_container_high #2c2a21;
+    @define-color surface_container_high #272a2f;
 
-    @define-color surface_container_highest #37352c;
+    @define-color surface_container_highest #32353a;
 
-    @define-color surface_container_low #1d1c13;
+    @define-color surface_container_low #181c20;
 
-    @define-color surface_container_lowest #100e07;
+    @define-color surface_container_lowest #0b0e12;
 
-    @define-color surface_dim #15130c;
+    @define-color surface_dim #101418;
 
-    @define-color surface_tint #d6c871;
+    @define-color surface_tint #9dcbfb;
 
-    @define-color surface_variant #4a4739;
+    @define-color surface_variant #42474e;
 
-    @define-color tertiary #a7d0b6;
+    @define-color tertiary #d4bee6;
 
-    @define-color tertiary_container #294e3b;
+    @define-color tertiary_container #504060;
 
-    @define-color tertiary_fixed #c3ecd2;
+    @define-color tertiary_fixed #f0dbff;
 
-    @define-color tertiary_fixed_dim #a7d0b6;
+    @define-color tertiary_fixed_dim #d4bee6;
 
