--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,135 +1,107 @@
-@import "./colors.css";
-
+/* @import "waybar.css"; */
+@import "colors.css";
 * {
+  /* background-color: @background; */
+  /* color: @foreground; */
+
   border: none;
   border-radius: 0;
-  font-family: "JetBrainsMono Nerd Font Propo", sans-serif;
+  min-height: 0;
+  font-family: 'JetBrainsMono Nerd Font';
   font-size: 12px;
-  margin: 0px;
-  min-height: 0px;
 }
 
+
 window#waybar {
-  background-color: @surface_container;
+  background: rgba(0,0,0,0.20);
+  opacity: 1;
+  /* background-color: @surface_container_lowest; */
   color: @on_surface_variant;
 }
 
-/* #workspaces,
-#clock,
-#battery,
-#pulseaudio,
-#network,
-#cpu,
-#memory,
-#disk,
-#tray,
-#mpris,
-#custom-weather {
-  margin: 0;
-} */
-/* -----------------------------------------------------------------------------
-* Group Clock
-* -------------------------------------------------------------------------- */
-/* #date_time {
-  border-radius: 8px;
-  background: @surface_container;
-  border: 1px solid @outline_variant;
-  padding: 3px 10px;
-} */
-
-#date_time {
-  background: @surface_container;
-  border: 1px solid @outline_variant;
-}
-#date_time > *:not(:last-child) {
-  border-right: 1px solid @outline_variant;
+.modules-left {
+  margin-left: 8px;
 }
 
-#clock.time {
-  padding: 3px 10px;
+.modules-right {
+  margin-right: 8px;
 }
-#clock.date {
-  padding: 3px 10px;
-}
-
-#tray {
-  /* background: @surface_container; */
-  /* border: 1px solid @outline_variant; */
-  padding: 0px 5px;
-}
-/* -----------------------------------------------------------------------------
-* Group Workspaces
-* -------------------------------------------------------------------------- */
-
-/* #workspaces {
-} */
 
 #workspaces button {
-  /* color: @on_surface;
+  all: initial;
   background: transparent;
-  border: none;
-  padding: 3px 3px;
-  transition: background 0.2s ease, box-shadow 0.2s ease,
-    border-bottom-color 0.2s ease;
-  border-bottom: 1px solid transparent; */
-  padding: 3px 5px;
-  border-radius: 50px;
-  color: @on_surface;
+  /* border: none; */
+  padding: 0px 5px;
+  margin: 0px 1.5px;
+  min-width: 9px;
+  border-bottom: 1px solid transparent;
 }
 
 #workspaces button.active {
-  background: @primary_container;
-}
-
-#workspaces button:hover {
-  background: @surface_container_high;
-}
-
-/* -----------------------------------------------------------------------------
-* Group Networking
-* -------------------------------------------------------------------------- */
-/* #net {
+  color: @primary;
+  border-bottom-color: @primary;
   background: @surface_container;
-  border: 1px solid @outline_variant;
-} */
-#net > *:not(:last-child) {
-  border-right: 1px solid @outline_variant;
+  box-shadow: inset 0 0 1px rgba(0,0,0,0.04);
+}
+#workspaces button.empty {
+  opacity: 0.6;
+}
+
+#cpu,
+#battery,
+#pulseaudio,
+#custom-arch,
+#custom-screenrecording-indicator,
+#custom-update {
+  min-width: 12px;
+  margin: 0 7.5px;
+}
+
+#custom-arch {
+  /* padding: 0 5px; */
+}
+
+#battery.charging {
+  color: @primary;   /* or any color you want */
+}
+#tray {
+  margin-right: 16px;
+}
+
+#bluetooth {
+  margin-right: 17px;
 }
 
 #network {
-  padding: 0px 10px;
-}
-#bluetooth {
-  padding: 0px 10px;
-}
-/* -----------------------------------------------------------------------------
-* Group Resources
-* -------------------------------------------------------------------------- */
-/* #resources {
-  background: @surface_container;
-  border: 1px solid @outline_variant;
-} */
-
-#resources > *:not(:last-child) {
-  border-right: 1px solid @outline_variant;
+  margin-right: 13px;
 }
 
-#battery {
-  padding: 0px 10px;
-}
-/* #battery.critical {
-  color: @error;
-} */
-#pulseaudio {
-  padding: 0px 10px;
+#custom-expand-icon {
+  margin-right: 18px;
 }
 
-/* ------------------------------------------------ */
-#date_time,
-#tray,
-#net,
-#resources {
-  border-radius: 8px;
-  background: @surface_container;
-  border: 1px solid @outline_variant;
+tooltip {
+  padding: 2px;
+}
+
+#custom-update {
+  font-size: 10px;
+}
+
+#clock {
+  margin-left: 8.75px;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+#custom-screenrecording-indicator {
+  min-width: 12px;
+  margin-left: 8.75px;
+  font-size: 10px;
+}
+
+#custom-screenrecording-indicator.active {
+  color: #a55555;
 }
