--- a/.config/swayosd/colors.css
+++ b/.config/swayosd/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1a1111;
+    @define-color background #101418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #382e2e;
+    @define-color inverse_on_surface #2d3135;
 
-    @define-color inverse_primary #8f4a4d;
+    @define-color inverse_primary #2c638b;
 
-    @define-color inverse_surface #f0dede;
+    @define-color inverse_surface #e0e2e8;
 
-    @define-color on_background #f0dede;
+    @define-color on_background #e0e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561d22;
+    @define-color on_primary #003351;
 
-    @define-color on_primary_container #ffdada;
+    @define-color on_primary_container #cde5ff;
 
-    @define-color on_primary_fixed #3b080e;
+    @define-color on_primary_fixed #001d31;
 
-    @define-color on_primary_fixed_variant #733337;
+    @define-color on_primary_fixed_variant #084b72;
 
-    @define-color on_secondary #44292a;
+    @define-color on_secondary #23323f;
 
-    @define-color on_secondary_container #ffdada;
+    @define-color on_secondary_container #d4e4f6;
 
-    @define-color on_secondary_fixed #2c1516;
+    @define-color on_secondary_fixed #0d1d2a;
 
-    @define-color on_secondary_fixed_variant #5d3f40;
+    @define-color on_secondary_fixed_variant #394857;
 
-    @define-color on_surface #f0dede;
+    @define-color on_surface #e0e2e8;
 
-    @define-color on_surface_variant #d7c1c1;
+    @define-color on_surface_variant #c2c7ce;
 
-    @define-color on_tertiary #422c05;
+    @define-color on_tertiary #372a4a;
 
-    @define-color on_tertiary_container #ffddb0;
+    @define-color on_tertiary_container #eddcff;
 
-    @define-color on_tertiary_fixed #291800;
+    @define-color on_tertiary_fixed #221533;
 
-    @define-color on_tertiary_fixed_variant #5b421a;
+    @define-color on_tertiary_fixed_variant #4e4161;
 
-    @define-color outline #9f8c8c;
+    @define-color outline #8c9198;
 
-    @define-color outline_variant #524343;
+    @define-color outline_variant #42474e;
 
-    @define-color primary #ffb3b4;
+    @define-color primary #99ccfa;
 
-    @define-color primary_container #733337;
+    @define-color primary_container #084b72;
 
-    @define-color primary_fixed #ffdada;
+    @define-color primary_fixed #cde5ff;
 
-    @define-color primary_fixed_dim #ffb3b4;
+    @define-color primary_fixed_dim #99ccfa;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e6bdbd;
+    @define-color secondary #b8c8da;
 
-    @define-color secondary_container #5d3f40;
+    @define-color secondary_container #394857;
 
-    @define-color secondary_fixed #ffdada;
+    @define-color secondary_fixed #d4e4f6;
 
-    @define-color secondary_fixed_dim #e6bdbd;
+    @define-color secondary_fixed_dim #b8c8da;
 
     @define-color shadow #000000;
 
-    @define-color source_color #aa303e;
+    @define-color source_color #137bb8;
 
-    @define-color surface #1a1111;
+    @define-color surface #101418;
 
-    @define-color surface_bright #413737;
+    @define-color surface_bright #36393e;
 
-    @define-color surface_container #271d1d;
+    @define-color surface_container #1c2024;
 
-    @define-color surface_container_high #322828;
+    @define-color surface_container_high #272a2e;
 
-    @define-color surface_container_highest #3d3232;
+    @define-color surface_container_highest #313539;
 
-    @define-color surface_container_low #221919;
+    @define-color surface_container_low #181c20;
 
-    @define-color surface_container_lowest #140c0c;
+    @define-color surface_container_lowest #0b0f12;
 
-    @define-color surface_dim #1a1111;
+    @define-color surface_dim #101418;
 
-    @define-color surface_tint #ffb3b4;
+    @define-color surface_tint #99ccfa;
 
-    @define-color surface_variant #524343;
+    @define-color surface_variant #42474e;
 
-    @define-color tertiary #e6c18d;
+    @define-color tertiary #d2bfe7;
 
-    @define-color tertiary_container #5b421a;
+    @define-color tertiary_container #4e4161;
 
-    @define-color tertiary_fixed #ffddb0;
+    @define-color tertiary_fixed #eddcff;
 
-    @define-color tertiary_fixed_dim #e6c18d;
+    @define-color tertiary_fixed_dim #d2bfe7;
 
