--- a/.config/swayosd/colors.css
+++ b/.config/swayosd/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1a1110;
+    @define-color background #111418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #392e2d;
+    @define-color inverse_on_surface #2e3035;
 
-    @define-color inverse_primary #904a44;
+    @define-color inverse_primary #38608f;
 
-    @define-color inverse_surface #f1dedc;
+    @define-color inverse_surface #e1e2e8;
 
-    @define-color on_background #f1dedc;
+    @define-color on_background #e1e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #561e1a;
+    @define-color on_primary #00325a;
 
-    @define-color on_primary_container #ffdad6;
+    @define-color on_primary_container #d2e4ff;
 
-    @define-color on_primary_fixed #3b0908;
+    @define-color on_primary_fixed #001c37;
 
-    @define-color on_primary_fixed_variant #73332e;
+    @define-color on_primary_fixed_variant #1c4875;
 
-    @define-color on_secondary #442927;
+    @define-color on_secondary #263141;
 
-    @define-color on_secondary_container #ffdad6;
+    @define-color on_secondary_container #d7e3f8;
 
-    @define-color on_secondary_fixed #2c1513;
+    @define-color on_secondary_fixed #101c2b;
 
-    @define-color on_secondary_fixed_variant #5d3f3c;
+    @define-color on_secondary_fixed_variant #3c4858;
 
-    @define-color on_surface #f1dedc;
+    @define-color on_surface #e1e2e8;
 
-    @define-color on_surface_variant #d8c2bf;
+    @define-color on_surface_variant #c3c6cf;
 
-    @define-color on_tertiary #3f2d04;
+    @define-color on_tertiary #3c2947;
 
-    @define-color on_tertiary_container #fedea6;
+    @define-color on_tertiary_container #f4d9ff;
 
-    @define-color on_tertiary_fixed #261900;
+    @define-color on_tertiary_fixed #261431;
 
-    @define-color on_tertiary_fixed_variant #584419;
+    @define-color on_tertiary_fixed_variant #533f5f;
 
-    @define-color outline #a08c8a;
+    @define-color outline #8d9199;
 
-    @define-color outline_variant #534341;
+    @define-color outline_variant #43474e;
 
-    @define-color primary #ffb4ac;
+    @define-color primary #a2c9fe;
 
-    @define-color primary_container #73332e;
+    @define-color primary_container #1c4875;
 
-    @define-color primary_fixed #ffdad6;
+    @define-color primary_fixed #d2e4ff;
 
-    @define-color primary_fixed_dim #ffb4ac;
+    @define-color primary_fixed_dim #a2c9fe;
 
     @define-color scrim #000000;
 
-    @define-color secondary #e7bdb8;
+    @define-color secondary #bbc7db;
 
-    @define-color secondary_container #5d3f3c;
+    @define-color secondary_container #3c4858;
 
-    @define-color secondary_fixed #ffdad6;
+    @define-color secondary_fixed #d7e3f8;
 
-    @define-color secondary_fixed_dim #e7bdb8;
+    @define-color secondary_fixed_dim #bbc7db;
 
     @define-color shadow #000000;
 
-    @define-color source_color #d52c2c;
+    @define-color source_color #12171e;
 
-    @define-color surface #1a1110;
+    @define-color surface #111418;
 
-    @define-color surface_bright #423735;
+    @define-color surface_bright #37393e;
 
-    @define-color surface_container #271d1c;
+    @define-color surface_container #1d2024;
 
-    @define-color surface_container_high #322826;
+    @define-color surface_container_high #272a2f;
 
-    @define-color surface_container_highest #3d3231;
+    @define-color surface_container_highest #32353a;
 
-    @define-color surface_container_low #231918;
+    @define-color surface_container_low #191c20;
 
-    @define-color surface_container_lowest #140c0b;
+    @define-color surface_container_lowest #0b0e13;
 
-    @define-color surface_dim #1a1110;
+    @define-color surface_dim #111418;
 
-    @define-color surface_tint #ffb4ac;
+    @define-color surface_tint #a2c9fe;
 
-    @define-color surface_variant #534341;
+    @define-color surface_variant #43474e;
 
-    @define-color tertiary #e0c38c;
+    @define-color tertiary #d8bde4;
 
-    @define-color tertiary_container #584419;
+    @define-color tertiary_container #533f5f;
 
-    @define-color tertiary_fixed #fedea6;
+    @define-color tertiary_fixed #f4d9ff;
 
-    @define-color tertiary_fixed_dim #e0c38c;
+    @define-color tertiary_fixed_dim #d8bde4;
 
